fixed benefits card overflow on mobile

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -763,6 +763,10 @@ main {
         margin-top: 0;
     }
 
+    .benefits__card--container {
+        grid-template-columns: 1fr;
+    }
+
     .features__main-content {
         grid-template-columns: 1fr;
     }
